protox/src/parse/snapshots/protox__parse__tests__parse_text_format_message-11.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Message {
        fields: [
            Field {
                name: Ident(
                    Ident {
                        value: "foo",
                        span: 0..3,
                    },
                ),
                value: ScalarList(
                    [
                        Ident {
                            negative: false,
                            ident: Ident {
                                value: "enum",
                                span: 6..10,
                            },
                            span: 6..10,
                        },
                    ],
                    5..11,
                ),
                span: 0..11,
            },
        ],
    },
)
