protox/src/parse/snapshots/protox__parse__tests__parse_text_format_message-15.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Message {
        fields: [
            Field {
                name: Ident(
                    Ident {
                        value: "escapes",
                        span: 0..7,
                    },
                ),
                value: Scalar(
                    String(
                        String {
                            value: "\\007\\010\\014\\n\\r\\t\\013?\\\\\\'\\\"\\001\\tI\\n\\252\\341\\204\\221\\364\\201\\204\\221",
                            span: 9..65,
                        },
                    ),
                ),
                span: 0..65,
            },
        ],
    },
)
