protox/src/parse/snapshots/protox__parse__tests__parse_text_format_message-19.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedEof {
            expected: "a field name or '}'",
        },
    ],
)
